--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <header>
         <div class="logo">
             <!-- Round Logo -->
-            <img src="C:\Users\shubham gupta\Downloads\channels4_profile.jpg" alt="Manish Sonu Logo">
+            <img src="channels4_profile.jpg" alt="Manish Sonu Logo">
             <h1>Manish Sonu</h1>
         </div>
         <nav>
