--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <!-- Clicking on the title, video number, or thumbnail will open the video in the same tab -->
             <a href="adivshi.html">
                 <h2>Video #1</h2>
-                <img src="C:\Users\shubham gupta\Downloads\1.png" alt="Video Thumbnail">
+                <img src="1.png" alt="Video Thumbnail">
             </a>
             <p>Adivashi Hair Oil Scam.</p>
         </section>
