--- a/adivshi.html
+++ b/adivshi.html
@@ -109,7 +109,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="path_to_your_logo.jpg" alt="Manish Sonu Logo">
+            <img src="channels4_profile.jpg" alt="Manish Sonu Logo">
             <h1>Manish Sonu</h1>
         </div>
         <nav>
